<resources>
    <string name="app_name">Retail Mapping</string>


    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error">Error has occoured</string>
    <string name="no_data">No data found!</string>
    <string name="error_password_match">Passwords Does Not Match</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>


    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="furniture_request">Branding Furniture Request</string>
    <string name="board_request">Branding Material Request</string>
    <string name="add_shop">Add Shop</string>
    <string name="create_client">Create User</string>
    <string name="existing">Choose Existing</string>

    <string name="in_shop">In Shop</string>
    <string name="on_shop">On Shop</string>
    <string name="upload">Upload</string>
    <string name="comment">Comment</string>
    <string name="report">View Report</string>

    <string name="add_after_image">Add After Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
